--- a/html_ifmt_project/style_1_year.css
+++ b/html_ifmt_project/style_1_year.css
@@ -24,6 +24,74 @@ Reset CSS
     font-style: normal;
   }
 
-  .logo img {
-    width: 500px;
-  }
+img{
+  width: 1000px;
+}
+
+.logo{
+  text-align: center;
+}
+
+.nocolor1{
+ background-color: white;
+ text-align: center;
+  padding: 1.4%;
+}
+
+ h1 {
+  background-color: #f7f7f7;
+  font-size: 1.5rem;
+  font-weight:  normal;
+  padding: 2.5%;
+  text-align: center;
+}
+.introduction{
+  border-top: 5px solid black;
+  border-bottom: 5px solid black ;
+}
+
+.color1{
+  background-color:  rgb(111, 111, 195);
+  color: whitesmoke;
+  text-align: center;
+  padding: 1.4%;
+  border-top: 5px solid white;
+  border-bottom: 5px solid white ;
+}
+
+.trasicao{
+  background-color: white;
+  padding: 1.2%;
+  border-top: 6px solid white;
+}
+
+.container {
+  max-width:  1000px;
+  margin: auto;
+  padding: 0 1rem;
+
+}
+
+footer{
+  background-color:  rgb(34, 34, 173) ;  
+}
+
+footer ul{
+  display: flex;
+  justify-content: space-evenly;
+
+  padding-top: 3rem;
+  list-style-type: none; 
+}
+
+footer a{
+  color: white
+}
+footer p.copyright {
+  padding: 3rem 0;
+  color: #ffffffdd;
+  text-align: center;
+}
+
+
+
